# tk_comfyui_comic_tool

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  ruff.toml
docs/skills/comic-script-authoring/: PROMPT_TEMPLATE.md  README.md  SKILL.md  schema.json
docs/skills/comic-script-authoring/examples/01_minimal/: output.json  (+1 more)
docs/superpowers/plans/: 2026-04-23-comic-batch-m1-foundation.md  2026-04-23-comic-batch-m2-validation-skill.md
docs/superpowers/specs/: 2026-04-23-comfyui-comic-batch-m2-validation-skill.md  2026-04-23-comfyui-comic-batch-node-design.md
tk_comfyui_batch_image/: __init__.py  schema_export.py  validate.py
tk_comfyui_batch_image/core/: cache_manager.py  compositor.py  constants.py  image_ops.py  layout_solver.py  normalizer.py  prompt_builder.py  sampler_runner.py  schema.py  types.py  validator.py
tk_comfyui_batch_image/examples/workflows/: m1_basic_vertical_stack.json
tk_comfyui_batch_image/nodes/: batch_generator.py  page_composer.py  sampler_override.py  script_loader.py
tk_comfyui_batch_image/tests/: conftest.py  test_batch_generator.py  test_cache_manager.py  test_cli_validate.py  test_compositor.py  test_examples_valid.py  test_integration_e2e.py  test_layout_solver.py  test_normalizer.py  test_page_composer.py  test_prompt_builder.py  test_sampler_override.py  test_sampler_runner.py  test_schema.py  test_schema_export.py  test_script_loader.py  test_types.py  test_validator.py  test_validator_layer2.py
tk_comfyui_batch_image/tests/fixtures/scripts/: basic.json  invalid_missing_version.json  minimal.json
(+8 files in other folders)
