[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tk_comfyui_batch_image"
version = "0.1.0"
description = "ComfyUI custom node set for batch comic-page generation from a JSON script"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "jsonschema>=4.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["tk_comfyui_batch_image*"]
